--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
           </form>
         </div>
         <div class="photo-block">
-          <img src="./bitrixlav.png" alt="Битрикслав Одинесов">
+          <img src=" bitrixlav.png" alt="Битрикслав Одинесов">
+  
         </div>
       </div>
     </div>
